<resources>
    <string name="app_name">VillaDelSol</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Salones</string>
    <string name="menu_room1">Salon 1</string>
    <string name="menu_room2">Salon 2</string>
    <string name="menu_citas">Citas</string>
    <string name="menu_admin">Administrador</string>
    <string name="menu_slideshow">Paquetes</string>

    <string-array name="eventos">
        <item>Bodas</item>
        <item>XV Años</item>
        <item>Infantil</item>
        <item>Cumpleaños</item>
        <item>Graduación</item>
        <item>Conferencia</item>
        <item>Presentación</item>
    </string-array>

    <string-array name="salones">
        <item>Salon 1</item>
        <item>Salon 2</item>
    </string-array>

    <string-array name="num_invitados">
        <item>50</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
    </string-array>
    <string name="title_activity_dashboard_admin">DashboardAdmin</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>