<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.villadelsol.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_room1"
        android:name="com.example.villadelsol.ui.room1.Room1Fragment"
        android:label="@string/menu_room1"
        tools:layout="@layout/fragment_room1" />
    <fragment
        android:id="@+id/nav_room2"
        android:name="com.example.villadelsol.ui.room2.Room2Fragment"
        android:label="@string/menu_room2"
        tools:layout="@layout/fragment_room2" />
    <fragment
        android:id="@+id/nav_citas"
        android:name="com.example.villadelsol.ui.citas.CitasFragment"
        android:label="@string/menu_citas"
        tools:layout="@layout/fragment_citas" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.villadelsol.ui.contact.ContactFragment"
        android:label="Contacto"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/nav_admin"
        android:name="com.example.villadelsol.ui.admin.AdminFragment"
        android:label="@string/menu_admin"
        tools:layout="@layout/fragment_admin" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.villadelsol.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.villadelsol.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

</navigation>